# Document_Digitizer

./: .env  README.md  config.json
data/: dd_dataset.json
dd_workflow/: pyproject.toml
dd_workflow/configs/: config.yml  config_eval.yml
dd_workflow/src/dd_workflow/: dd_workflow_function.py  register.py
dd_workflow/src/dd_workflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
dd_workflow/src/dd_workflow/configs/: config.yml  config_without_AddMemory.yml
mcp_dd/: attachment_utility.py  classes.py  comparison_utility.py  dd_mcp_server.py  email_utility.py  exampleOutputs.py  mcp_client.py  requirements.txt  utility.py
