[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
root = "../AIQToolkit"

[project]
name = "dd_workflow"
dynamic = ["version"]
dependencies = [
  "aiqtoolkit[langchain]","agentiq[crewai]", "agentiq[mem0ai]"
]
requires-python = ">=3.11,<3.13"
description = "Custom AIQ Toolkit Workflow"
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
aiqtoolkit = { path = "../AIQToolkit", editable = true }

[project.entry-points.'aiq.components']
dd_workflow = "dd_workflow.register"